--- a/GiG/startwindow.ui
+++ b/GiG/startwindow.ui
@@ -50,6 +50,12 @@
         <height>240</height>
        </size>
       </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
       <property name="url">
        <url>
         <string>about:blank</string>
